# DirAnalyzer

./: .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  main  main.cpp  main.h
test/: CMakeLists.txt  tests.cpp
